--- a/docs/content/concepts.mdx
+++ b/docs/content/concepts.mdx
@@ -37,6 +37,10 @@ An asset is an object in persistent storage, such as a table, file, or persisted
     title="Auto-materializing assets"
     href="/concepts/assets/asset-auto-execution"
   ></ArticleListItem>
+  <ArticleListItem
+    title="Asset checks (Experimental)"
+    href="/concepts/assets/asset-checks"
+  ></ArticleListItem>
 </ArticleList>
 
 ---
